--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "background":{
-		"scripts":["./js/background.js","./js/modular.js"],
+		"page": "./background.html",
         "persistent": false
 		
     },
@@ -17,9 +17,9 @@
     },
     "content_scripts": [
         {
-            "matches": ["http://*/*","https://*/*"],
+            "matches": [ "http://*/*", "https://*/*" ],
             "css": [],
-            "js": [ "./js/curWindow.js" ]
+            "js": [ "./js/curWindow.js"]
         }
     ],
     "permissions": [
@@ -27,5 +27,5 @@
         "activeTab",
         "storage"
     ],
-    "version": "0.4.1.0"
+    "version": "1.0.0.5"
 }
